--- a/ppmpss-pkg.1
+++ b/ppmpss-pkg.1
@@ -20,10 +20,18 @@
 .\" You should have received a copy of the GNU General Public License along
 .\" with ppmpss. If not, see <https://www.gnu.org/licenses/>.
 
-.TH PPMPSS 1
+.TH PPMPSS-PKG 1
 .SH NAME
-ppmpss \- Portable Package Manager made in Posix SHELL Script
+ppmpss-pkg \- build a ppmpss package archive
 .SH SYNOPSIS
-.B ppmpss
+.B ppmpss pkg
+[\fIOPTIONS\fR] [\fIPKG\fR]...
 .SH DESCRIPTION
-Build, package, and install software.
+Read a package template and build the corresponding package archive for ppmpss.
+.SH OPTIONS
+.TP
+.B \-o <\fIOUTPUT\fR>
+Build the ppmpss package archive to specified \fIOUTPUT\fR.
+.TP
+.B \-c <\fITEMPLATE\fR>
+Build a package from a specified \fITEMPLATE\fR.
