--- a/ppmpss-rm.1
+++ b/ppmpss-rm.1
@@ -20,10 +20,10 @@
 .\" You should have received a copy of the GNU General Public License along
 .\" with ppmpss. If not, see <https://www.gnu.org/licenses/>.
 
-.TH PPMPSS 1
+.TH PPMPSS-RM 1
 .SH NAME
-ppmpss \- Portable Package Manager made in Posix SHELL Script
+ppmpss-rm \- remove a package from the system
 .SH SYNOPSIS
-.B ppmpss
+.B ppmpss rm [\fRPKG\fR]...
 .SH DESCRIPTION
-Build, package, and install software.
+Remove the specified \fIPKG\fR from the system.
