--- a/ppmpss-rm.1
+++ b/ppmpss-rm.1
@@ -21,9 +21,13 @@
 .\" with ppmpss. If not, see <https://www.gnu.org/licenses/>.
 
 .TH PPMPSS-RM 1
+
 .SH NAME
 ppmpss-rm \- remove a package from the system
+
 .SH SYNOPSIS
-.B ppmpss rm [\fRPKG\fR]...
+.B ppmpss rm
+[\fRPKG\fR]...
+
 .SH DESCRIPTION
 Remove the specified \fIPKG\fR from the system.
